# build_ntp_os

./: README.md  build-debian-live.sh  install-deps.sh
staging/: install.cfg  menu.cfg
staging/config/hooks/: .chroot-inside-Debian-Live.hook.chroot.swp  BT-install.sh  chroot-inside-Debian-Live.hook.chroot  menues-changes.hook.binary
staging/etc/: addrepo.list.chroot  issue.net  motd  sources.list
staging/etc/logrotate.d/: vehere-mldns  vehere-mlflow  vehere-probe
staging/etc/logstash/conf.d/: 10-suricata_logstash.conf  10-vehere_probe.conf  20-suricata_metrics_logstash.conf  20-vehere_alerts.conf  30-vehere_monitor.conf  40-vehere_mlalert_temp.conf  50-vehere_dpi_logstash.conf  logstash-elastalert.conf  logvehere-alert.conf  logvehere-monitor.conf
staging/etc/logstash/templates/: ls-valerts.json  ls-vflows.json  ls-vmldns.json  ls-vmlnetflow.json  ls-vprobe.json  ls-vstats.json
staging/opt/vehere/: delete-old-logs.sh  gps2udp.desktop  gpsd  gpsd2udp.sh  intelliworker.service  intelliworker.sh  logvehere-alerts.json  ntp.conf  p0flib.tgz  startall.sh  stopall.sh  vnfsalert-install.sh
staging/opt/vehere/7.0/: e1000e-zc-dkms_3.2.7.1.1837_all.deb  fm10k-zc-dkms_0.20.1.1837_all.deb  i40e-zc-dkms_2.3.6.1837_all.deb  igb-zc-dkms_5.3.3.5.1837_all.deb  install.sh  ixgbe-zc-dkms_5.0.4.1837_all.deb  pf_ringctl  pfring-dkms_7.0.0_all.deb  pfring-drivers-zc-dkms_1.3_all.deb  pfring_7.0.0-1837_amd64.deb  vnfs_balance
staging/opt/vehere/config/: mldns-whitelist.txt  vnfs.json
staging/opt/vehere/config/dictionaries/: dhcp_fingerprints.txt  dpi_proto.yml  iana_protocol_numbers.yml  iana_service_names_dccp.yml  iana_service_names_udp.yml  mac_manu.ds  protos.txt  sni.lst  tcp_protocols.yml
staging/opt/vehere/config/license/: LICENSE.txt
staging/opt/vehere/elasticsearch/: elasticsearch.yml  jvm.options
staging/opt/vehere/logstash/: jvm.options  logstash  logstash.service
staging/opt/vehere/ml_files/: .~lock.install.odt#  ML-installation.sh  public_suffix.csv  top-1m-TLD.csv
staging/opt/vehere/ml_files/script_jar/: dataMerge.sh  dnsAnalysis.sh  dnspl.csv  dnssl.csv  elasticFilterScript.sh  machine_learning_config.json  mldatamerge.service  mldns-configuration.json  mldns.service  mldnsfilter_probe.scala  mlnetflow-configuration.json  mlnetflow.service  mlnetflowfilter_probe.scala  netflow-20190801190653.json  netflowAnalysis.sh  netflowpl.csv  netflowsl.csv  spark-defaults.conf  summaryDataScript.sh  top-1m-TLD.csv
staging/opt/vehere/ndpi_files/: sources.list
staging/opt/vehere/probe_files/: key.bat  pf_ringctl  reconstruct.service
staging/opt/vehere/probe_files/probe/: vnfs_balance  vnfs_cfg_tool  vnfs_export_pcap  vnfs_fanout  vnfs_iploc  vnfs_json_test  vnfs_key_gen  vnfs_log_viewer  vnfs_mac_resolv  vnfs_pump
staging/opt/vehere/probe_files/recon/: README.TXT  VIPL_39578ABSKLNTUUERAFSYTEYTW9Q3RJ.LIC  a.out  file.ext.detector.txt  foip.sh  frame.picker.settings.cfg  http_header.lst  http_uri.lst  lic.bat  lic.sh  list.txt  main.c  protocol.analyser.settings.txt  protocols.ignore.lst  recon.app.txt  recon.bat  recon.sh  sip.interface.cfg  vnfs.recon.settings.txt  voip.rtp.type.list  wa.txt
staging/opt/vehere/vnfsalert_files/: HTTP_uri.txt  blacklist1.txt  blacklist2.txt  domain.txt  fingerprint.txt  torexitnodes.txt  torrouternodes.txt
staging/opt/vehere/vnfsui/: kibana-5.5.2-amd64.deb.sha1.txt  kibana-5.5.2-buildinfo.txt  kibana.yml  maps.tar.xz  vnfsui-dashboards-autoload
staging/opt/vehere/vnfsui/monitoring-dashboards/: load.sh  metricbeat  metricbeat.service  metricbeat.yml  metricbeat_install.sh  metricbeat_processes_custom
staging/opt/vehere/vnfsui/vnfsui-dashboard/: bulk_insert_script.py  load.sh
staging/opt/vehere/yaf_files/: flowmonitor.conf  intelliworker_old.sh  packetm_args.conf  packetmediator.conf  packetmediator.service  packetworker.init  pipeline-datasources.conf  pipeline.conf  pipeline.service  pipeline_args.conf  pipelinestart.sh  sm_pcap.conf  spread.conf  startall_old.sh  startpipeline.sh  stopall_old.sh  super_m_args.conf  super_mediator.conf  super_mediator.service  suricata.yaml  vehere-dpi  vehere-mldns  vehere-mlflow  vehere-stats  vnfs.cfg  vnfs_probe.cfg  yaf.init  yafDPIRules.conf  yaf_pcap.init
staging/opt/vehere/yaf_files/init.d/: suricata
staging/opt/vehere/yaf_files/super_mediator-1.5.3/: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  super_mediator.spec.in
staging/opt/vehere/yaf_files/super_mediator-1.5.3/doc/: LICENSE.txt  Makefile.am  Makefile.in  add-header-md.pl  add-header.pl  quick_setup.md  sm_dedup.md  sm_guide.md  sm_ssl_dedup.md
staging/opt/vehere/yaf_files/super_mediator-1.5.3/etc/: Makefile.am  Makefile.in
staging/opt/vehere/yaf_files/super_mediator-1.5.3/etc/init.d/: super_mediator.in
staging/opt/vehere/yaf_files/super_mediator-1.5.3/include/: Makefile.am  Makefile.in
staging/opt/vehere/yaf_files/super_mediator-1.5.3/include/mediator/: config.h.cmake  config.h.in  mediator.h  mediator_CERT_IE.h  mediator_config.h  mediator_core.h  mediator_ctx.h  mediator_filter.h  mediator_inf.h  mediator_util.h  templates.h
staging/opt/vehere/yaf_files/super_mediator-1.5.3/m4/: ax_check_libz.m4  ax_lib_mysql.m4  ax_lib_skipset.m4  smsummary.m4  spread.m4
staging/opt/vehere/yaf_files/super_mediator-1.5.3/src/: CMakeLists.txt  Makefile.am  Makefile.in  lookup3.c  mediator.c  mediator_config_lex.c  mediator_config_lex.l  mediator_config_parse.c  mediator_config_parse.h  mediator_config_parse.y  mediator_core.c  mediator_dedup.c  mediator_dedup.h  mediator_dns.c  mediator_dns.h  mediator_export.c  mediator_filter.c  mediator_json.c  mediator_json.h  mediator_log.c  mediator_log.h  mediator_mysql.c  mediator_open.c  mediator_print.c  mediator_print.h  mediator_ssl.c  mediator_ssl.h  mediator_stat.c  mediator_stat.h  mediator_util.c  super_mediator.conf.pod  super_mediator.pod  super_table_creator.pod
staging/opt/vehere/yaf_files/yaf-2.9.3/: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac  yaf.spec
(+673 files in other folders)
