## Process this file with automake to produce Makefile.in
## ------------------------------------------------------------------------
## Makefile.am (startup)
## autotools build system for super_mediator
## ------------------------------------------------------------------------
## Copyright (C) 2012-2013 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Emily Sarneso
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

EXTRA_DIST = super_mediator.conf init.d/super_mediator.in

dist_sysconf_DATA = super_mediator.conf
