## Process this file with automake to produce Makefile.in
## ------------------------------------------------------------------------
## Makefile.am (include)
## autotools build system for super-mediator
## ------------------------------------------------------------------------
## Copyright (C) 2012-2017 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Emily Sarneso
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

noinst_HEADERS = \
	mediator/mediator.h \
	mediator/mediator_CERT_IE.h \
	mediator/mediator_config.h \
	mediator/mediator_core.h \
	mediator/mediator_ctx.h \
	mediator/mediator_filter.h \
	mediator/mediator_inf.h \
	mediator/templates.h \
	mediator/mediator_util.h

